removed test / java options clause